# MomentoFlector

./: .gitignore  CMakeLists.txt  README.md
MomentoFlector/: CMakeLists.txt  DiferenciasFinitas.cpp  DiferenciasFinitas.h  Disparo.cpp  Disparo.h  MomentoFlector.cpp  MomentoFlector.h  Richardson.cpp  Richardson.h
